--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,158 @@
-aiohttp==3.8.5
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-altair==5.1.1
-amqp==5.2.0
-annotated-types==0.7.0
-antlr4-python3-runtime==4.13
-anyio==4.6.0
-appdirs==1.4.4
-async-timeout==4.0.3
-asyncssh==2.15.0
-atpublic==4.1.0
-attrs==23.2.0
-AutoTS==0.5.9
-billiard==4.2.0
-blinker==1.6.2
-celery==5.4.1
-certifi==2024.6.20
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-configobj==5.0.8
-cryptography==41.0.4
-dacite==1.8.1
-dictdiffer==0.9.0
-diskcache==5.6.3
-distro==1.9.0
-dnspython==2.7.1
-dpath==2.2.1
-dulwich==0.21.4
-dvc==3.55.0
-dvc-data==3.18.1
-dvc-http==2.37.0
-dvc-objects==5.5.0
-dvc-render==1.1.3
-dvc-studio-client==0.23.1
-dvc-task==0.4.2
-email_validator==2.1.1
-entrypoints==0.4
-exceptiongroup==1.2.2
-fastapi==0.115.0
-fastapi-cli==0.0.4
-filelock==3.15.1
-flatten-dict==0.4.2
-flufl.lock==7.1.1
-frozendict==2.4.2
-frozenlist==1.4.1
-fsspec==2024.6.0
-funcy==2.1
-gitdb==4.1.0
-GitPython==3.1.36
-grandalf==0.9
-gto==1.8.0
-h11==0.14.0
-html5lib==1.1
-htmlmin==0.1.12
-httpcore==1.0.5
-httptools==0.7.2
-httpx==0.24.2
-hydra-core==1.4.0
-idna==3.7
-ImageHash==4.3.1
-iterative-telemetry==0.1.0
-itsdangerous==2.2.1
-Jinja2==3.1.4
-joblib==1.4.2
-kombu==5.3.7
-lightgbm==4.1.0
-lxml==4.9.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-mdurl==0.1.2
-multidict==6.1.0
-multimethod==1.10
-multitasking==0.0.11
-mysql-connector==2.2.9
-mysqlclient==2.2.0
-neattext==0.1.3
-networkx==3.3
-numpy==1.26.4
-omegaconf==2.3.1
-orjson==3.10.5
-packaging==24.1
-pandas==2.2.2
-pandas-profiling==3.6.6
-pathspec==0.12.1
-pconst==1.1
-phik==0.12.3
-platformdirs==4.0.0
-prompt_toolkit==3.0.47
-psutil==5.9.8
-pyarrow==12.0.1
-pycparser==2.21
-pydantic==2.8.3
-pydantic-extra-types==2.8.0
-pydantic-settings==2.3.1
-pydantic_core==2.19.0
-pydeck==0.8.2
-pydot==2.0.0
-pygit2==1.15.1
-Pygments==2.16.1
-pygtrie==2.5.0
-Pympler==1.0.1
-pyparsing==3.1.2
-python-dateutil==2.9.0.post1
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-pywin32==306
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.6.1
-ruamel.yaml==0.18.6
-ruamel.yaml.clib==0.2.8
-scikit-learn==1.3.1
-scipy==1.11.2
-scmrepo==3.6.5
-semver==3.0.3
-shellingham==1.6.0
-shortuuid==1.0.13
-shtab==1.8.0
-six==1.16.0
-smmap==5.0.0
-sniffio==1.4.0
-sqltrie==0.11.0
-starlette==0.38.2
-streamlit==1.27.2
-tabulate==0.10.0
-tangled-up-in-unicode==0.3.0
-threadpoolctl==3.5.1
-tomlkit==0.12.6
-tqdm==4.66.4
-typeguard==3.0.3
-typer==0.13.0
-typing_extensions==4.9.0
-tzdata==2023.3
-tzlocal==4.3
-ujson==5.9.0
-urllib3==2.2.2
-uvicorn==0.31.1
-validators==0.21.0
-vine==5.1.0
-visions==0.8.1
-voluptuous==0.15.0
-watchfiles==0.23.0
-wcwidth==0.2.6
-websockets==12.1
-wordcloud==1.9.2
-xgboost==1.7.6
-yarl==1.9.5
-ydata-profiling==4.7.0
-yfinance==0.2.31
-zc.lockfile==3.1.0
+aiohttp
+aiohttp-retry
+aiosignal
+altair
+amqp
+annotated-types
+antlr4-python3-runtime
+anyio
+appdirs
+async-timeout
+asyncssh
+atpublic
+attrs
+AutoTS
+billiard
+blinker
+celery
+certifi
+cffi
+charset-normalizer
+click
+click-didyoumean
+click-plugins
+click-repl
+colorama
+configobj
+cryptography
+dacite
+dictdiffer
+diskcache
+distro
+dnspython
+dpath
+dulwich
+dvc
+dvc-data
+dvc-http
+dvc-objects
+dvc-render
+dvc-studio-client
+dvc-task
+email_validator
+entrypoints
+exceptiongroup
+fastapi
+fastapi-cli
+filelock
+flatten-dict
+flufl.lock
+frozendict
+frozenlist
+fsspec
+funcy
+gitdb
+GitPython
+grandalf
+gto
+h11
+html5lib
+htmlmin
+httpcore
+httptools
+httpx
+hydra-core
+idna
+ImageHash
+iterative-telemetry
+itsdangerous
+Jinja2
+joblib
+kombu
+lightgbm
+lxml
+markdown-it-py
+MarkupSafe
+mdurl
+multidict
+multimethod
+multitasking
+mysql-connector
+mysqlclient
+neattext
+networkx
+numpy
+omegaconf
+orjson
+packaging
+pandas
+pandas-profiling
+pathspec
+pconst
+phik
+platformdirs
+prompt_toolkit
+psutil
+pyarrow
+pycparser
+pydantic
+pydantic-extra-types
+pydantic-settings
+pydantic_core
+pydeck
+pydot
+pygit2
+Pygments
+pygtrie
+Pympler
+pyparsing
+python-dateutil
+python-dotenv
+python-multipart
+pytz
+pytz-deprecation-shim
+pywin32
+PyYAML
+requests
+rich
+ruamel.yaml
+ruamel.yaml.clib
+scikit-learn
+scipy
+scmrepo
+semver
+shellingham
+shortuuid
+shtab
+six
+smmap
+sniffio
+sqltrie
+starlette
+streamlit
+tabulate
+tangled-up-in-unicode
+threadpoolctl
+tomlkit
+tqdm
+typeguard
+typer
+typing_extensions
+tzdata
+tzlocal
+ujson
+urllib3
+uvicorn
+validators
+vine
+visions
+voluptuous
+watchfiles
+wcwidth
+websockets
+wordcloud
+xgboost
+yarl
+ydata-profiling
+yfinance
+zc.lockfile
