--- a/requirements.txt
+++ b/requirements.txt
@@ -1,157 +1,55 @@
-aiohttp>=3.8, <4
-aiohttp-retry>=2.8, <3
-aiosignal>=1.3, <2
-altair>=4.2, <5
-amqp>=5.0, <6
-annotated-types>=0.7, <1
-antlr4-python3-runtime>=4.9, <5
-anyio>=3.7, <4
-appdirs>=1.4, <2
-async-timeout>=4.0, <5
-asyncssh>=2.14, <3
-atpublic>=4.1, <5
-attrs>=23.1, <24
-AutoTS>=0.5.8, <0.6
-billiard>=4.1, <5
-blinker>=1.6, <2
-celery>=5.3, <6
-certifi>=2023.6, <2025
-cffi>=1.15, <2
-charset-normalizer>=3.3, <4
-click>=8.1, <9
-click-didyoumean>=0.3, <1
-click-plugins>=1.1, <2
-click-repl>=0.3, <1
-colorama>=0.4, <1
-configobj>=5.0, <6
-cryptography>=3.3.2, <43
-dacite>=1.8, <2
-dictdiffer>=0.9, <1
-diskcache>=5.6, <6
-distro>=1.8, <2
-dnspython>=2.6, <3
-dpath>=2.0, <3
-dulwich>=0.22, <1
-dvc>=3.0, <4
-dvc-data>=3.15, <4
-dvc-http>=2.32, <3
-dvc-objects>=5.1, <6
-dvc-render>=1.0, <2
-dvc-studio-client>=0.20, <1
-dvc-task>=0.4, <1
-email_validator>=2.1, <3
-entrypoints>=0.4, <1
-exceptiongroup>=1.0, <2
-fastapi>=0.95, <1
-fastapi-cli>=0.0.4
-filelock>=3.15, <4
-flatten-dict>=0.4, <1
-flufl.lock>=7.1, <8
-frozendict>=2.3, <3
-frozenlist>=1.4, <2
-fsspec>=2023.6, <2025
-funcy>=2.0, <3
-gitdb>=4.0, <5
-GitPython>=3.1, <4
-grandalf>=0.8
-gto>=1.7, <2
-h11>=0.14, <1
-html5lib>=1.1, <2
-htmlmin>=0.1, <1
-httpcore>=1.0, <2
-httptools>=0.6, <1
-httpx>=0.23, <1
-hydra-core>=1.3, <2
-idna>=3.3, <4
-ImageHash>=4.3, <5
-iterative-telemetry>=0.0.8
-itsdangerous>=2.2, <3
-Jinja2>=3.1, <4
-joblib>=1.1, <2
-kombu>=5.3, <6
-lightgbm>=3.3, <4
-lxml>=4.9, <5
-markdown-it-py>=2.2, <3
-MarkupSafe>=2.1, <3
-mdurl>=0.1.2
-multidict>=6.0, <7
-multimethod>=1.9, <2
-multitasking>=0.0.11
-mysql-connector>=2.2, <3
-mysqlclient>=2.2, <3
-neattext>=0.1, <1
-networkx>=3.2, <4
-numpy>=1.21, <2
-omegaconf>=2.2, <3
-orjson>=3.8, <4
-packaging>=24.1, <25
-pandas>=1.5, <3
-pandas-profiling>=3.2, <4
-pathspec>=0.12, <1
-pconst>=1.0, <2
-phik>=0.12, <1
-platformdirs>=3.0, <4
-prompt_toolkit>=3.0, <4
-psutil>=5.9, <6
-pyarrow>=11.0, <12
-pycparser>=2.20, <3
-pydantic>=2.0, <3
-pydantic-extra-types>=2.0, <3
-pydantic-settings>=2.0, <3
-pydantic_core>=2.0, <3
-pydeck>=0.8, <1
-pydot>=2.0, <3
-pygit2>=1.5, <2
-Pygments>=2.15, <3
-pygtrie>=2.5, <3
-Pympler>=1.0, <2
-pyparsing>=3.1, <4
-python-dateutil>=2.9, <3
-python-dotenv>=1.0, <2
-python-multipart>=0.0.9
-pytz>=2022.7, <2023
-pytz-deprecation-shim>=0.1, <1
-PyYAML>=6.0, <7
-requests>=2.32, <3
-rich>=13.3, <14
-ruamel.yaml>=0.18, <1
-ruamel.yaml.clib>=0.2, <1
-scikit-learn>=1.0, <2
-scipy>=1.13, <2
-scmrepo>=3.0, <4
-semver>=3.0, <4
-shellingham>=1.5, <2
-shortuuid>=1.0, <2
-shtab>=1.7, <2
-six>=1.16, <2
-smmap>=5.0, <6
-sniffio>=1.3, <2
-sqltrie>=0.11, <1
-starlette>=0.36, <1
-streamlit>=1.21, <2
-tabulate>=0.9, <1
-tangled-up-in-unicode>=0.2, <1
-threadpoolctl>=3.0, <4
-tomlkit>=0.12, <1
-tqdm>=4.64, <5
-typeguard>=2.13, <3
-typer>=0.12, <1
-typing_extensions>=4.8, <5
-tzdata>=2023.3
-tzlocal>=4.3
-ujson>=5.1, <6
-urllib3>=2.0, <3
-uvicorn>=0.18, <1
-validators>=0.20, <1
-vine>=5.1, <6
-visions>=0.7, <1
-voluptuous>=0.14, <1
-watchfiles>=0.22, <1
-wcwidth>=0.2, <1
-websockets>=12.0, <13
-wordcloud>=1.9, <2
-xgboost>=1.7, <2
-yarl>=1.9, <2
-ydata-profiling>=4.0, <5
-yfinance>=0.2, <1
-zc.lockfile>=3.0
+annotated-types==0.6.0
+anyio==4.3.0
+astroid==2.4.1
+autopep8==1.5.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.3
+dnspython==2.6.1
+email_validator==2.1.1
+exceptiongroup==1.2.0
+fastapi==0.110.0
+h11==0.14.0
+httpcore==1.0.4
+httptools==0.6.1
+httpx==0.27.0
+idna==3.6
+isort==4.3.21
+itsdangerous==2.1.2
+Jinja2==3.1.3
+joblib==1.3.2
+lazy-object-proxy==1.4.3
+MarkupSafe==2.1.5
+mccabe==0.6.1
+numpy==1.24.4
+orjson==3.9.15
+pandas==2.0.3
+pycodestyle==2.6.0
+pydantic==2.6.4
+pydantic-extra-types==2.6.0
+pydantic-settings==2.2.1
+pydantic_core==2.16.3
+pylint==2.5.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+rope==0.17.0
+scikit-learn==1.3.2
+scipy==1.10.1
+six==1.16.0
+sniffio==1.3.1
+starlette==0.36.3
+threadpoolctl==3.4.0
+toml==0.10.1
+typing_extensions==4.10.0
+tzdata==2024.1
+ujson==5.9.0
+urllib3==2.2.1
+uvicorn==0.29.0
+watchfiles==0.21.0
+websockets==12.0
+wrapt==1.12.1
